agregando imagen de bondi en los resultados

--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -520,6 +520,7 @@ $(function() {
 <script id="itemTempl" type="text/x-jquery-tmpl"> 
     <li id="res${id}">
         <a href="#" id="${id}">
+            <img src="/media/img/micros/30x35/${foto}.png" style="float:left; margin-top: 4px; margin-right: 4px"/>
             <strong>${nombre}</strong>
             <br>
             de ${inicio} a ${fin}
