--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">CualBondi</a>
+        <a class="brand" href="/" style="background:url(/media/img/logo-navbar.png); height:25px; width:132px; padding:0; margin: 5px 20px 0 0;"></a>
         <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="/"><i class="icon-home icon-white"></i> Inicio</a></li>
