--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,8 @@
 <html lang="es">
     <head>
 	    <meta charset="utf-8">
-    	<title>{% block title %}Cualbondi.com.ar{% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="/media/img/favicon.png" />
+    	<title>{% block title %}Cualbondi{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/media/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		<link href="/media/css/estilo.css" rel="stylesheet" type="text/css" />
