agregando google ads al mapa

--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -26,6 +26,8 @@
                                         <input type="text" size="16" id="inputHasta" class="span10" placeholder="Hasta">
                                     </div>
                                     <p><small>Ejemplos: {{ ciudad_actual.sugerencia }}</small></p>
+                                        <script type="text/javascript">google_ad_client="ca-pub-1193419141108967";google_ad_slot="9820069640";google_ad_width=234;google_ad_height=60;</script>
+                                        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
                                     <div class="btn-toolbar">
                                         <div class="btn-group">
                                             <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
@@ -56,6 +58,10 @@
                         </div>
                         <hr>
                         <div id="sidebarContenido">
+                        </div>
+                        <div>
+                            <script type="text/javascript">google_ad_client="ca-pub-1193419141108967";google_ad_slot="0175038549";google_ad_width=234;google_ad_height=60;</script>
+                            <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
                         </div>
                     </div>
 
