--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -316,12 +316,8 @@ $(function() {
     var ajaxInputLinea = false
     var buscar     = true //false si busca de A a B, true si busca por nombre de recorrido (es para llamar la funcion correcta al paginar)
 
-    // aca arrancan las funciones de cualbondi que pueden llamarse desde el html
-    // namespace de cualbondi que se ve desde afuera por mas que minifiquemos
-    $.cb = new Object()
-
     // handler para mostrar resultados, usa el template de listado de results
-    $.cb.mostrar_resultado = function(id) {
+    function mostrar_resultado(id) {
         if ( typeof(id)==='undefined' )
             id = $("#sidebarContenido li:first").attr("id").slice(3)
         $("#sidebarContenido li").removeClass("active")
@@ -354,6 +350,7 @@ $(function() {
             else data2=data
             if ( data1 !== null && data2 !== null ) {
                 $("#listSuggest").tmpl([{ data1: data1, data2: data2 }]).appendTo($("#sidebarContenido").empty())
+                bindearEventos();
             }
         }
         $.ajax({
@@ -371,7 +368,7 @@ $(function() {
     }
 
     // mueve el markerA o B a el punto seleccionado
-    $.cb.marcarPunto = function(pointWKT, id, domId) {
+    function marcarPunto(pointWKT, id, domId) {
         // pointWKT es 'POINT(12.234 56.789)'
         // id es 1 para origen(markerA) y 2 para destino(markerB)
         var point = new OpenLayers.Format.WKT().read(pointWKT).geometry
@@ -387,7 +384,7 @@ $(function() {
     }
 
     // busca una vez que se eligieron las sugerencias
-    $.cb.seleccionarSugerencias = function() {
+    function seleccionarSugerencias() {
         markerA.confirmado = true
         markerB.confirmado = true
         if ( markerA.listo && markerB.listo ) {
@@ -397,7 +394,7 @@ $(function() {
     }
 
     // busca por transbordo
-    $.cb.buscarTransbordo = function() {
+    function buscarTransbordo() {
         markerA.confirmado = true
         markerB.confirmado = true
         if ( markerA.listo && markerB.listo ) {
@@ -410,7 +407,7 @@ $(function() {
     // n = -1: pagina anterior
     //      x: pagina x
     //      0: pagina siguiente
-    $.cb.pagina = function(n) {
+    function pasarPagina(n) {
         if ( n < 0 )
             pagina = ( pagina > 1 ) ? pagina - 1 : 1;
         else if ( n == 0 )
@@ -462,10 +459,11 @@ $(function() {
                 resultados[value.id] = value.itinerario
             });
             $("#listTempl").tmpl( [{ data: data }] ).appendTo($("#sidebarContenido").empty());
+            bindearEventos();
             $("[id^=res]").each( function(i) {
                 $(this).children().bind("click", function(e) {
                     id = $(this).attr("id")
-                    $.cb.mostrar_resultado(id)
+                    mostrar_resultado(id)
                     e.preventDefault()
                 })
                 $(this).children().bind("mouseenter", function(e) {
@@ -488,17 +486,30 @@ $(function() {
                     recorridos.removeFeatures(polyhover)
                 })
             })
-            $.cb.mostrar_resultado()
+            mostrar_resultado()
         }
     }
 
-    // bind eventos click
+    // bind eventos click partes estaticas de la pagina (bind unico)
     $("#button-ayuda").bind("click", function(e) {
-        $("#ayudaTempl").tmpl().appendTo($("#sidebarContenido").empty());
         e.preventDefault()
+        $("#ayudaTempl").tmpl().appendTo($("#sidebarContenido").empty());
+    })
+
+    function invalidarMarkers() {
+        markerA.confirmado = false
+        markerB.confirmado = false
+    }
+    $("#inputDesde").bind("change", invalidarMarkers)
+    $("#inputHasta").bind("change", invalidarMarkers)
+
+    $("#button-buscarinputs").bind("click", function(e) {
+        e.preventDefault();
+        buscar_por_inputs();
     })
     
     $("#button-origendestino").bind("click", function(e) {
+        e.preventDefault()
         desde = $("#inputDesde").val()
         hasta = $("#inputHasta").val()
         if ( $.trim(desde) != '' && $.trim(hasta) != '' ) {
@@ -517,20 +528,40 @@ $(function() {
             // buscar sobre los textbox
             buscar_por_inputs()
         }
-        e.preventDefault()
     })
 
-    function invalidarMarkers() {
-        markerA.confirmado = false
-        markerB.confirmado = false
+    // bind eventos click partes dinamicas de la pagina (bind multiple)
+    function bindearEventos() {
+        $("#button_buscar_transbordo:not(binded)").bind("click", function(e) {
+            e.preventDefault();
+            buscarTransbordo();
+            $(this).addClass("binded");
+        })
+
+        $("#button-seleccionarSugerencias:not(binded)").bind("click", function(e) {
+            e.preventDefault();
+            seleccionarSugerencias();
+            $(this).addClass("binded");
+        })
+
+        $(".marcarSuggest:not(binded)").bind("click", function(e) {
+            e.preventDefault();
+            marcarPunto(
+                $(this).attr("data_geom"), 
+                $(this).attr("data_id"),
+                $(this).attr("data_domId")
+            );
+            $(this).addClass("binded");
+        })
+
+        $("div.pagination a[href]:not(binded)").bind("click", function(e) {
+            e.preventDefault();
+            pasarPagina($(this).attr("data_pagina"));
+            console.log($(this).attr("data_pagina"))
+            console.log($(this))
+            $(this).addClass("binded");
+        })
     }
-    $("#inputDesde").bind("change", invalidarMarkers)
-    $("#inputHasta").bind("change", invalidarMarkers)
-
-    $("#button-buscarinputs").bind("click", function(e) {
-        buscar_por_inputs()
-        e.preventDefault()
-    })
 
 })
 </script>
@@ -570,11 +601,11 @@ $(function() {
 <script id="paginacionTempl" type="text/x-jquery-tmpl">
     <div class="pagination pagination-centered">
         <ul>
-            <li><a href="#" onclick="javascript:$.cb.pagina(-1);return false">«</a></li>
-            <li><a href="#" onclick="javascript:$.cb.pagina(1);return false">1</a></li>
+            <li><a href="#" data_pagina="-1">«</a></li>
+            <li><a href="#" data_pagina="1">1</a></li>
             <li class="disabled"><a>...</a></li>
-            <li><a href="#" onclick="javascript:$.cb.pagina(${Math.ceil(cant/long_pagina)});return false">${Math.ceil(cant/long_pagina)}</a></li>
-            <li><a href="#" onclick="javascript:$.cb.pagina(0);return false">»</a></li>
+            <li><a href="#" data_pagina="${Math.ceil(cant/long_pagina)}">${Math.ceil(cant/long_pagina)}</a></li>
+            <li><a href="#" data_pagina="0">»</a></li>
         </ul>
     </div>
 </script>
@@ -596,13 +627,13 @@ $(function() {
     </ul>
     <div>
         &nbsp;
-        <button id="button-seleccionarSugerencias" class="btn btn-primary pull-right" type="submit" onclick="javascript:$.cb.seleccionarSugerencias();return false">Aceptar</button>
+        <button id="button-seleccionarSugerencias" class="btn btn-primary pull-right" type="submit">Aceptar</button>
     </div>
 </ul>
 </script>
 <script id="itemSuggest" type="text/x-jquery-tmpl">
     <li id="sug${domId}">
-        <a href="#" onclick="javascript:$.cb.marcarPunto('${geom}', ${id}, ${domId});return false">${nombre} <span class="distancia">(${(precision*100).toFixed(2)}%)</span></a>
+        <a class="marcarSuggest" href="#" data_geom="${geom}" data_id="${id}" data_domId="${domId}">${nombre} <span class="distancia">(${(precision*100).toFixed(2)}%)</span></a>
     </li>
 </script>
 
@@ -619,7 +650,7 @@ $(function() {
 <script id="vacioTempl" type="text/x-jquery-tmpl">
    <h3>No se encontraron resultados sin transbordo</h3>
    <p>Si igualmente desea buscar con transbordo, presione el siguiente botón</p>
-   <button id="button_buscar_transbordo" class="btn btn-primary" onclick="javascript:$.cb.buscarTransbordo(); return false;">Buscar con Transbordo</button>
+   <button id="button_buscar_transbordo" class="btn btn-primary">Buscar con Transbordo</button>
 </script>
 
 {% endblock %}
