--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -1,85 +1,79 @@
-{% extends "maquetado.html" %}
+{% extends "base.html" %}
+
+{% block custom_styles %}
+    <style type="text/css">
+        body { background-color: #42bfe5; padding-top: 60px;}
+
+        .bs-docs-sidenav .icon-chevron-right {
+            float: right;
+            margin-top: 2px;
+            margin-right: -6px;
+            opacity: .25;
+        }
+
+        .bs-docs-sidenav > li > a:hover { background-color: #f5f5f5; }
+
+        .bs-docs-sidenav a:hover .icon-chevron-right { opacity: .5; }
+
+        .bs-docs-sidenav > li > a {
+            display: block;
+            width: 190px 9;
+            margin: 0 0 -1px;
+            padding: 8px 14px;
+            border: 1px solid #E5E5E5;
+            background-color: white;
+        }
+
+        .bs-docs-sidenav {
+            width: 300px;
+            padding: 0;
+            position: relative;
+            left: 50%;
+            margin-left: -150px;
+            background-color: #fff;
+                -webkit-border-radius: 6px;
+                -moz-border-radius: 6px;
+            border-radius: 6px;
+                -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+                -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+            box-shadow: 0 1px 4px rgba(0,0,0,.065);
+        }
+
+        .bs-docs-sidenav > li:first-child > a {
+            -webkit-border-radius: 6px 6px 0 0;
+            -moz-border-radius: 6px 6px 0 0;
+            border-radius: 6px 6px 0 0;
+        }
+
+        .bs-docs-sidenav > li:last-child > a {
+            -webkit-border-radius: 0 0 6px 6px;
+            -moz-border-radius: 0 0 6px 6px;
+            border-radius: 0 0 6px 6px;
+        }
+
+        @media (min-width: 650px) {
+            .floated-left { float:left; }
+            .block-wrapper { position: absolute; left: 50%; margin-left: -300px; }
+        }
+    </style>
+{% endblock %}
 
 <!--Este es un template distinto a todos, por eso redefine el blocke "content" -->
 {% block content %}
-
-        <div class="row-fluid" style="margin-bottom:20px;">
-            <div class="span7">
-                <div class="row-fluid">
-                    <div class="span6">
-                        <img src="/media/img/logo.png" />
-                    </div>
-                    <div class="span6">
-                        <h2>Selecioná tu ciudad</h2>
-                        <p>... y comenzá a realizar tus búsquedas</p>
-                        <form method="POST" action="/seleccionar-ciudad/">
-                        {% csrf_token %}
-
-                        <select name="ciudad" class="span4">
-                        {% for ciudad in ciudades %}
-                            <option value="{{ciudad.id}}">{{ciudad.nombre}}</option>
-                        {% endfor %}
-                        </select>
-
-                        <label class="checkbox">
-                            <input type="checkbox" name="predeterminada" value="true" />
-                            Hacerla mi ciudad predeterminada
-                        </label>
-                        <p>
-                            <button type="submit" name="next" value="mapa" class="btn btn-success btn-large">Ir al mapa &raquo;</button>
-                            <button type="submit" name="next" value="contenido" class="btn btn-primary btn-large">Ir al contenido &raquo;</button>
-                        </p>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="span5">
-                <h2>Registrate gratis!</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
+    <div>
+        <div align="center">
+            <h1 style="font-size: 55px;">Selecioná tu ciudad!</h1>
+        </div>
+        <div class="block-wrapper">
+            <div class="floated-left" align="center" style="min-width: 300px; margin-top: 20px;"><img style="min" src="/media/img/isologo.png"></div>
+            <div class="floated-left bs-docs-sidebar" style="min-width: 300px; margin-top: 20px;">
+                <ul class="nav nav-list bs-docs-sidenav">
+                    {% for ciudad in ciudades %}
+                    <li><a href="/{{ciudad.slug}}/"><i class="icon-chevron-right"></i> {{ciudad.nombre}}</a></li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
-        <div class="row-fluid" style="margin-bottom:30px;">
-            <div class="span12">
-                <div class="thumbnail">
-                    <div id="mapa" style="height:200px;"></div>
-                </div>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span4">
-                <h2>¿Para qué registrarme?</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-                <h2>¿Qué hay de nuevo?</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-            <div class="span4">
-                <h2>Registrate gratis!</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn" href="#">View details &raquo;</a></p>
-            </div>
-        </div>
-
+    </div>
 {% endblock %}
 
-{% block custom_ready_function %}
-    function inicializar_mapa() {
-        var latlng = new google.maps.LatLng(-34.61, -58.37);
-        var myOptions = {
-            disableDefaultUI: true,
-            zoom: 13,
-            center: latlng,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map($("#mapa")[0], myOptions);
-    }
-    inicializar_mapa();
-{% endblock %}
-
-{% block custom_scripts %}
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-{% endblock %}
