--- a/templates/core/ver_mapa_ciudad.html
+++ b/templates/core/ver_mapa_ciudad.html
@@ -109,7 +109,7 @@ $(function() {
         $("#bloque_izquierda").height(($(window).height()-58)+"px")
         $("body").css("padding-top","0px")
     }
-    if ( $(window).width() < 456 )
+    if ( $(window).width() <= 480 )
         $("#map").css("margin-right", "0px")
     else
         $("#map").css("margin-right", "-20px")
@@ -123,25 +123,28 @@ $(function() {
             $("#bloque_izquierda").height(($(window).height()-58)+"px")
             $("body").css("padding-top","40px")
             //esto no anda bien
-
                 $("#bloque_izquierda").height(($(window).height()-58)+"px")
-
         }
         else {
             $("#map").height(($(window).height()-50)+"px")
             $("body").css("padding-top","0px")
             //esto no anda bien
-
-                $("#bloque_izquierda").height(($(window).height()-68)+"px")
-
+                //$("#bloque_izquierda").height(($(window).height()-68)+"px")
+                resizeBloqueIzquierda();
         }
-        if ( $(window).width() < 456 )
+        if ( $(window).width() <= 480 ) {
             $("#map").css("margin-right", "0px")
+            resizeBloqueIzquierda();
+        }
         else
             $("#map").css("margin-right", "-20px")
     });
     // fin bootstrap 100% height
-
+    
+    function resizeBloqueIzquierda() {
+        $("#bloque_izquierda").height($("#bloque_izquierda").prop("scrollHeight"));
+        $("#bloque_izquierda").height("auto");
+    }
 
     // definicion inicial del mapa
     OpenLayers.ImgPath = "/media/css/openlayers/"
@@ -295,6 +298,7 @@ $(function() {
         e.preventDefault();
         recorridos.removeAllFeatures()
         $("#ajaxLoader").tmpl().appendTo($("#sidebarContenido").empty())
+        resizeBloqueIzquierda()
         if ( ajaxInputLinea ) ajaxInputLinea.abort()
         pagina = 1
         inputLinea()
@@ -359,6 +363,7 @@ $(function() {
     function buscar_por_inputs() {
         recorridos.removeAllFeatures()
         $("#ajaxLoader").tmpl().appendTo($("#sidebarContenido").empty())
+        resizeBloqueIzquierda()
         var data1 = null
         var data2 = null
         // muestra los resultados de la busqueda como sugerencia
@@ -369,6 +374,7 @@ $(function() {
             else data2=data
             if ( data1 !== null && data2 !== null ) {
                 $("#listSuggest").tmpl([{ data1: data1, data2: data2 }]).appendTo($("#sidebarContenido").empty())
+                resizeBloqueIzquierda()
                 bindearEventos();
             }
         }
@@ -446,6 +452,7 @@ $(function() {
         buscar     = true
         recorridos.removeAllFeatures()
         $("#ajaxLoader").tmpl().appendTo($("#sidebarContenido").empty())
+        resizeBloqueIzquierda()
         lla = lla.transform(map.getProjectionObject(), proj)
         llb = llb.transform(map.getProjectionObject(), proj)
         $.get(
@@ -471,6 +478,7 @@ $(function() {
         if ( res.length === 0 )
             if ( pagina == 1 ) {
                 $("#vacioTempl").tmpl().appendTo($("#sidebarContenido").empty());
+                resizeBloqueIzquierda()
                 bindearEventos();
             }
             else
@@ -481,6 +489,7 @@ $(function() {
                 resultados[value.id] = value.itinerario
             });
             $("#listTempl").tmpl( [{ data: data }] ).appendTo($("#sidebarContenido").empty());
+            resizeBloqueIzquierda()
             bindearEventos();
             $("[id^=res]").each( function(i) {
                 $(this).children().bind("click", function(e) {
@@ -516,6 +525,7 @@ $(function() {
     $("#button-ayuda").bind("click", function(e) {
         e.preventDefault()
         $("#ayudaTempl").tmpl().appendTo($("#sidebarContenido").empty());
+        resizeBloqueIzquierda()
     })
 
     function invalidarMarkers() {
