--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -53,7 +53,8 @@
 
         @media (min-width: 650px) {
             .floated-left { float:left; }
-            .block-wrapper { position: absolute; left: 50%; margin-left: -300px; }
+            .block-wrapper { position: absolute; left: 50%; margin-left: -315px; }
+            .bs-docs-sidebar { margin-left: 30px; }
         }
     </style>
 {% endblock %}
@@ -62,7 +63,8 @@
 {% block content %}
     <div>
         <div align="center">
-            <h1 style="font-size: 55px;">Selecioná tu ciudad!</h1>
+            <h1 style="font-size: 55px;">Bienvenido a Cualbondi!</h1>
+            <p class="lead"><em>Seleccioná tu ciudad para comenzar a buscar...</em></p>
         </div>
         <div class="block-wrapper">
             <div class="floated-left" align="center" style="min-width: 300px; margin-top: 20px;"><img style="min" src="/media/img/isologo.png"></div>
