Agrega caja de twitter

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,7 +26,7 @@
             {% if es_vista_mapa %}
                 <li><a href="/{{ciudad_actual.slug}}"><i class="icon-file icon-white"></i> Ir al contenido</a></li>
             {% else %}
-                <li><a href="/mapa/{{ciudad_actual.slug}}"><i class="icon-map-marker icon-white"></i> Ir al mapa</a></li>
+                <li><a href="/mapa/{{ciudad_actual.slug}}"><i class="icon-search icon-white"></i> Ir al buscador</a></li>
             {% endif %}
         {% endif %}
     </ul>
