--- a/templates/contenido.html
+++ b/templates/contenido.html
@@ -19,7 +19,12 @@
             <div id="bloque_derecha" class="span3">
                 {% block bloque_derecha %}
                     <!--CAJA DE FACEBOOK-->
-                    <div align="center"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=250&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:360px;" allowTransparency="true"></iframe></div>
+                    <div align="center"><iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fcualbondi&amp;width=290&amp;height=360&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:290px; height:360px;" allowTransparency="true"></iframe></div>
+
+                    <!--CAJA DE TWITTER-->
+                    <a class="twitter-timeline" href="https://twitter.com/CualBondi" data-widget-id="293142996935905280">Tweets por @CualBondi</a>
+                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
                 {% endblock %}
             </div>
         </div>
